[gd_scene load_steps=11 format=3 uid="uid://c1qlu42rk21hl"]

[ext_resource type="PackedScene" uid="uid://b81l7s1rocwd8" path="res://scenes/player.tscn" id="1_2q6dc"]
[ext_resource type="Script" uid="uid://386audqujrp7" path="res://scenes/level.gd" id="1_mx8sn"]
[ext_resource type="Texture2D" uid="uid://cwq0y2ce4l3su" path="res://graphics/background.png" id="1_w7c3h"]
[ext_resource type="PackedScene" uid="uid://codoya0ydrchy" path="res://scenes/ui.tscn" id="4_mx8sn"]
[ext_resource type="AudioStream" uid="uid://cpnqif1t26yt0" path="res://sounds/explosion.mp3" id="5_ppgk2"]
[ext_resource type="AudioStream" uid="uid://d1s4douxsnpml" path="res://sounds/damage.mp3" id="6_2r41h"]
[ext_resource type="AudioStream" uid="uid://btemdfnoi3vpl" path="res://sounds/sound-loop.mp3" id="7_klq6b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2r41h"]
size = Vector2(1891.31, 145)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mx8sn"]
size = Vector2(350, 1055.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ppgk2"]
size = Vector2(1591, 176)

[node name="Level" type="Node2D"]
script = ExtResource("1_mx8sn")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(613.829, 386.5)
scale = Vector2(0.412114, 0.3388)
texture = ExtResource("1_w7c3h")

[node name="Player" parent="." instance=ExtResource("1_2q6dc")]
position = Vector2(610, 649)

[node name="Border" type="Node2D" parent="."]
position = Vector2(625, 484)

[node name="Bottom" type="StaticBody2D" parent="Border"]
position = Vector2(2, 21)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border/Bottom"]
position = Vector2(-19, 353)
shape = SubResource("RectangleShape2D_2r41h")

[node name="Right" type="StaticBody2D" parent="Border"]
position = Vector2(2061, 95)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border/Right"]
position = Vector2(-1303, -204)
shape = SubResource("RectangleShape2D_mx8sn")

[node name="Left" type="StaticBody2D" parent="Border"]
position = Vector2(-751, 122)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border/Left"]
position = Vector2(-44, -254)
shape = SubResource("RectangleShape2D_mx8sn")

[node name="Top" type="StaticBody2D" parent="Border"]
position = Vector2(2, 21)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Border/Top"]
position = Vector2(157, -598)
shape = SubResource("RectangleShape2D_ppgk2")

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="Enemies" type="Node2D" parent="."]

[node name="Lasers" type="Node2D" parent="."]

[node name="UI" parent="." instance=ExtResource("4_mx8sn")]

[node name="EnemyExplosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_ppgk2")

[node name="DamageSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(1303, 1013)
stream = ExtResource("6_2r41h")

[node name="GamePlaySound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_klq6b")
autoplay = true

[connection signal="laser" from="Player" to="." method="_on_player_laser"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="finished" from="GamePlaySound" to="." method="_on_game_play_sound_finished"]
